[package]
name = "phoenix-v1"
version = "0.2.4"
edition = "2021"
resolver = "2"
repository = "https://github.com/Ellipsis-Labs/phoenix-v1"
authors = ["Ellipsis Labs <maintainers@ellipsislabs.xyz>"]
description = "On-chain order book that atomically settles trades"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib", "lib"]
name = "phoenix"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test = []

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[dependencies]
shank = "0.0.12"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "4.0.0", features = [ "no-entrypoint" ] } 
solana-program = "2.1.1"
borsh = "0.10.4"
bytemuck = "1"
lib-sokoban = "0.3.0"
num_enum = "0.5.9"
itertools = "0.10.5"
thiserror = "2.0.12"
ellipsis-macros = "0.2.0"
solana-security-txt = "=1.1.1"
static_assertions = "1.1.0" 
 
# [dev-dependencies]
# rand = "0.7.3"
# ellipsis-client = "0.2.1"
# tokio = { version = "1.8.4", features = ["full"] }
# solana-sdk = "2.1.1"
# phoenix-sdk = "0.8.0"
